[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools", "wheel" ]

[project]
name = "pkg-26548"
version = "1.3.40"
readme = "README.md"
license-files = [ "LICENSE" ]
authors = [
  { name = "developers", email = "developers@tagdots.com" },
]
requires-python = ">=3.12.10"
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "click==8.3.1",
  "pandas==3.0.2",
  "pygithub==2.9.0",
  "rich==14.3.3",
]
optional-dependencies.local = [
  "commitizen",
  "pre-commit",
]
optional-dependencies.test = [
  "build",
  "coverage",
  "flake8",
  "isort",
  "pyscan-rs",
  "pytest",
  "twine",
]
urls.Changelog = "https://github.com/tagdots/delete-workflow-runs/blob/main/CHANGELOG.md"
urls.Documentation = "https://github.com/tagdots/delete-workflow-runs/blob/main/README.md"
urls.Homepage = "https://github.com/tagdots"
urls.Issues = "https://github.com/tagdots/delete-workflow-runs/issues"
urls.Repository = "https://github.com/tagdots/delete-workflow-runs"
scripts.pkg-26548 = "pkg_26548.run:main"

[dependency-groups]
test = [
  "coverage[toml]",
]

[tool.setuptools]
dynamic.version = { attr = "src.pkg_26548.__init__" }
packages.find.where = [ "src" ]

[tool.pyproject-fmt]
column_width = 125
indent = 2
keep_full_version = true

[tool.coverage]
run.branch = true
run.command_line = "-m pytest -vs tests/"
run.include = [ "src/pkg_26548/*" ]
run.omit = [ "tests/*" ]
report.fail_under = 80
report.include = [ "src/pkg_26548/*" ]
report.show_missing = false
source = [ "." ]

[tool.commitizen]
name = "cz_conventional_commits"
major_version_zero = false
tag_format = "$version"
update_changelog_on_bump = true
version_files = [
  "src/pkg_26548/__init__.py:__version__",
]
version_provider = "pep621"
version_scheme = "pep440"
